--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "buefy": "^0.7.7",
     "core-js": "^2.6.5",
     "register-service-worker": "^1.6.2",
+    "tiptap": "^1.22.5",
+    "tiptap-extensions": "^1.23.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.2.1",
@@ -27,7 +29,9 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.2.2",
+    "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
+    "sass-loader": "^7.1.0",
     "typescript": "^3.5.2",
     "vue-template-compiler": "^2.6.10"
   }
